--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,15 @@
+@font-face{
+    font-family:'광양햇살체';
+    src:url(../font/광양햇살체B/Gwangyang\ Sunshine\ Bold\(TTF용\).ttf);
+}
+@font-face{
+    font-family:'온글잎';
+    src:url(../font/온글잎_의청수_재선체/Ownglyph_2022_UWY_Jae_Seon-Rg.ttf);
+}
 .profile{
     width:250px; 
     display: block;
-    margin-left: 20%; 
+    margin-left: 30%; 
     margin-right: auto;
     margin-top: 30px;
     border-radius: 40px 40px / 40px 40px;
@@ -9,18 +17,19 @@
 }
 .text{
     
-    font-size: 16px;
-    border: 80px;
-    margin-top: 90px;
     font-size: 30px;
+    border: 80px;
+    margin-top: 50px;
     margin-left: 100px;
     font-weight: bold;
     float:left;
 }
 .text1{
-    font-size: 60px;
+    font-size: 100px;
     font-weight: bold;
     text-align: center;
+    margin-top: 0%;
+    margin-left: 20%;
 }
 .text3{
     font-size: 16px;
@@ -39,14 +48,16 @@
     margin-top: 5%;
 
     padding-top: 4%;
-    border-radius: 40px 40px / 40px 40px;
+    border-radius: 30px 30px / 30px 30px;
     box-shadow: 20px 20px black;
+    font-family: '온글잎';
 }
 
 .header{
     width: 100%;
-    height: 80px;
+    height: 120px;
     background: fcfce8;
+    background-color: aqua;
 }
 .left-menu{
     width: 30%;
@@ -70,8 +81,10 @@
 .textbox1{
     width: 90%;
     height: 400px;
-    background: fcfce8;
-    
+    margin-top: 0%;
+    background: #BB2649;
+    font-size: 80px;
+
 }
 .navbar li{
     display: inline-block;
@@ -104,3 +117,62 @@ td, th{
 table{
     border-collapse: collapse;
 }
+
+.hr-top {
+    width : 80%;
+    margin-top: 80px;
+    border : 4px;
+    border-top: 3px solid #f1f1e6;
+  }
+.hr-bottom{
+    width : 80%;
+    border : 4px;
+    border-top: 3px solid #f1f1e6;
+    position: left;
+}
+.box2{
+    width: 1400px;
+    height: 600px;
+    background-color: #BB2649;
+    margin:auto;
+    margin-top: 5%;
+
+    padding-top: 4%;
+    border-radius: 40px 40px / 40px 40px;
+    font-family: '온글잎';
+}
+.start{
+    font-family: 온글잎;
+    font-size: 140px;
+    text-align: center;
+    color: #eee;
+    font-weight: bold;
+}
+.text4{
+    font-size: 70px;
+    font-weight: bold;
+    text-align: center;
+    color: #eee;
+    font-weight: bold;
+}
+  
+  .typing-demo {
+    width: 25ch;
+    /* ch : 25개의 문자열을 포함 */
+    animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: monospace;
+    font-size: 2em;
+  }
+  
+  @keyframes blink-effect {
+    50% {
+      opacity: 0;
+    }
+  }
+  
+  .blink {
+    animation: blink-effect 1s step-end infinite;
+  }
