--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,14 @@
     margin-left: 37%;
 
 }
+.profile1{
+  width:260px; 
+  display: block;
+  margin-left: 13%; 
+  margin-right: auto;
+  margin-top: 35%;
+  margin-left: 37%;
+}
 .text{
     
     font-size: 30px;
@@ -40,6 +48,25 @@
     font-weight: bold;
     color: blue;
 }
+.text4{
+  
+  font-weight: bold;
+  text-align: center;
+  color: #eee;
+  font-weight: bold;
+}
+.text5{
+  margin-top: 10%;
+  margin-left: 100px;
+  float:left;
+  color: black;
+  font-size: small;
+  font-size: 60px;
+}
+.text6{
+  font-weight: bold;
+  font-size: 60px;
+}
 
 .box{
     width: 1400px;
@@ -52,6 +79,17 @@
     border-radius: 30px 30px / 30px 30px;
     box-shadow: 20px 20px black;
     font-family: '온글잎';
+}
+.box1{
+  width: 1400px;
+  height: 1700px;
+  background-color: #fcfce8;
+  margin:auto;
+  margin-top: 7%;
+
+  padding-top: 4%;
+  border-radius: 30px 30px / 30px 30px;
+  font-family: '온글잎';
 }
 
 .header{
@@ -83,14 +121,14 @@
     clear:both;
     vertical-align: top;
     float: left;
-    margin-top: -4%;
+    margin-top: -75%;
 }
 .textbox1{
     width: 90%;
-    height: 300px;
+    height: 1000px;
     margin-top: 0%;
-    background: f1f1e6;
-    font-size: 80px;
+    background: fcfce8;
+    
 
 }
 .navbar li{
@@ -99,10 +137,11 @@
     text-align: center;
     background-color: #eee;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 10px;
     right: 5px;
     margin-left: 10%;
     font-size: 30px;
+   
 }
 .main-background{
     width: 100%;
@@ -157,13 +196,7 @@ table{
     color: #eee;
     font-weight: bold;
 }
-.text4{
-    font-size: 70px;
-    font-weight: bold;
-    text-align: center;
-    color: #eee;
-    font-weight: bold;
-}
+
   
   .typing-demo {
     width: 25ch;
@@ -300,7 +333,4 @@ table{
     margin-left: 10px;
     margin-top: 20px;
   }
-  .text5{
-    font-weight: bold;
-    font-size: 60px;
-  }
+  
